<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/companyNameTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/stock_company_name"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/lastTradePriceTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/last_trade_price_only"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/dailyRangeTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/days_range"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/changeTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/change"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/dailyLowTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/stock_days_low"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/dailyHighTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/stock_days_high"
            android:layout_weight="1"/>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/yearLowTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/stock_year_low"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/yearHighTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/stock_year_high"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow9"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/marketCapTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/market_cap"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/dailyAveVolumeTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/daily_ave_volume"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow11"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/totalVolumeTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/total_volume"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow12"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <TextView
                android:id="@+id/stockExchangeTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/stock_exchange"
                android:layout_weight="1"/>
        </TableRow>
    </TableRow>
</TableLayout>
