<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/TableLayout1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_weight="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/stockSymbolEditText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/stock_symbol"
            android:ems="10"
            android:inputType="text"
            android:layout_weight="1">
            <requestFocus />
        </EditText>
        <Button
            android:id="@+id/enterStockSymbolButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/enter_stock_symbol"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/title_tab">
        <TextView
            android:id="@+id/stockSymbolInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:text="@string/stock_symbol_title_info"
            android:textSize="@dimen/stock_quotes"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/body_tab"
        android:layout_weight="1">
        <ScrollView
            android:id="@+id/stockScrollView"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_span="2"
            android:padding="5dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:stretchColumns="yes">
            </TableLayout>
        </ScrollView>
    </TableRow>
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/deleteStockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_all_symbols"
            android:layout_span="2"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/colorAccent"/>
    </TableRow>
</TableLayout>